2007-05-13  Bruno Haible  <bruno@clisp.org>

	* lib/vasprintf.c: Include stdio.h instead of vasprintf.h.
	* lib/glibconfig_.h: Likewise.

2007-05-13  Bruno Haible  <bruno@clisp.org>

	* modules/vasprintf.diff: Update.
	* lib/linebreak.c.diff: Update.

2007-05-01  Bruno Haible  <bruno@clisp.org>

	* lib/term-ostream.oo.c: Don't include sigprocmask.h.

2007-03-24  Bruno Haible  <bruno@clisp.org>

	* lib/html-ostream.oo.c: Include unistr.h instead of utf8-ucs4.h.

2007-03-16  Bruno Haible  <bruno@clisp.org>

	* lib/html-ostream.oo.c (html_ostream_create): Update after signature
	of gl_list_create_empty changed.

2007-03-04  Bruno Haible  <bruno@clisp.org>

	* lib/propername.c (proper_name, proper_name_utf8): Use mbsstr instead
	of strstr.
	* modules/propername (Depends-on): Remove strstr. Add mbsstr.

2007-03-04  Bruno Haible  <bruno@clisp.org>

	Moved --enable-relocatable infrastructure to gnulib.
	* modules/gettext-tools-libgettextpo-misc: Remove file.
	* modules/progreloc: Remove file.
	* modules/relocatable: Remove file.
	* modules/relocwrapper: Remove file.
	* lib/strerror.c.diff: Remove file.
	* Makefile.am (EXTRA_DIST): Remove these files.

2007-02-28  Bruno Haible  <bruno@clisp.org>

	Move relocatability infrastructure to gnulib.
	* lib/relocatable.c: Remove file.
	* lib/relocatable.h: Remove file.
	* lib/relocwrapper.c: Remove file.
	* m4/relocatable.m4: Remove file.
	* Makefile.am (EXTRA_DIST): Remove these files.

2007-02-28  Bruno Haible  <bruno@clisp.org>

	Move module xreadlink to gnulib.
	* modules/xreadlink: Remove file.
	* lib/xreadlink.h: Remove file.
	* lib/xreadlink.c: Remove file.
	* m4/xreadlink.m4: Remove file.
	* Makefile.am (EXTRA_DIST): Remove these files.

2007-02-19  Bruno Haible  <bruno@clisp.org>

	* lib/closeout.c: Include <stdlib.h> instead of exit.h.
	* lib/fd-ostream.oo.c: Don't include exit.h.
	* lib/html-styled-ostream.oo.c: Include <stdlib.h> instead of exit.h.
	* lib/iconv-ostream.oo.c: Don't include exit.h.